Add overview on algorithm

--- a/latex/first_approaches_and_problems.tex
+++ b/latex/first_approaches_and_problems.tex
@@ -34,6 +34,7 @@ Ist ein Elternknochen mit einem Gelenk in einer bestimmten Ausrichtung gegeben, 
 
 %-----------------------------
 \section{Aufbau als Grammatik}
+\label{section:grammar}
 
 \begin{itemize}
   \item Aufbau als Grammatik (am Ende aber für jedes Nichtterminal genau eine Regel)
