--- a/latex/generation_of_non_pca_things.tex
+++ b/latex/generation_of_non_pca_things.tex
@@ -43,7 +43,7 @@
 
 
 \begin{itemize}
- \item Bei echten Wirbeltieren gibt es sehr viele verschiedene Arten von Gelenken (siehe \cite{Vergleichende_Anatomie}, Absatz 21.5.2). Der Einfachheit halber werden hier nur Gelenke betrachtet, deren Winkel schon durch den Grundbauplan festgelegt sind (\zb zwischen Wirbeln), und Gelenke in Extremitätenmit einem Freiheitsgrad (\zb an Ellenbogen oder Knie) (näheres zu Gelenken in Extremitäten weiter unten)
+ \item Bei echten Wirbeltieren gibt es sehr viele verschiedene Arten von Gelenken \cite[Absatz 21.5.2]{Vergleichende_Anatomie}. Der Einfachheit halber werden hier nur Gelenke betrachtet, deren Winkel schon durch den Grundbauplan festgelegt sind (\zb zwischen Wirbeln), und Gelenke in Extremitätenmit einem Freiheitsgrad (\zb an Ellenbogen oder Knie) (näheres zu Gelenken in Extremitäten weiter unten)
 
  \item Einheiten der PCA für Koordinaten $[0, 1000]$, deshalb sind die Wirbelsäulen der generierten Skelette auch in diesem Rahmen. Blender interpretiert eine Einheit als $1$m. Deshalb wirken sie sehr groß.
  
